# delta

./: .clang-format  .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  README.md  map.c  map.h  slice.c  slice.h  sort.c  sort.h  strmap.c  strmap.h  vec.c  vec.h
include/delta/: allocator.h  hash.h  map.h  pputil.h  str.h  strmap.h  utilpp.h  vec.h
src/: allocator.c  hash.c  map.c  strmap.c  strmap.h  vec.c
test/: CMakeLists.txt  countchars.c  qex.c  slice.sh  slice_test.c  test.c  test.sh
test/bench/: CMakeLists.txt  cpp_vector.cpp  delta_vec.c
test/qex/: CMakeLists.txt  qex.c
